# templates

cpp/generic_cpp_template/: CMakeLists.txt  main.cpp
scripts/: new_cpp_proj
